pod-security-vpol/baseline/disallow-proc-mount/.chainsaw-test/pod-bad.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  hostUsers: false
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      procMount: Unmasked
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  hostUsers: false
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      procMount: Unmasked
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  hostUsers: false
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    securityContext:
      procMount: Unmasked
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  hostUsers: false
  initContainers:
  - name: initcontainer01
    image: dummyimagename
  - name: initcontainer02
    image: dummyimagename
    securityContext:
      procMount: Unmasked
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  hostUsers: false
  initContainers:
  - name: initcontainer01
    image: dummyimagename
  - name: initcontainer02
    image: dummyimagename
    securityContext:
      procMount: Unmasked
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      procMount: Unmasked
---
